edge-envoy/envoy.yaml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 9090
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          access_log:
            - name: envoy.http_grpc_access_log
              config:
                common_config:
                  log_name: "edgeenvoyaccesslog"
                  grpc_service:
                    envoy_grpc:
                      cluster_name: accesslogservice
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route: 
                  cluster: httpbin
                  host_rewrite: httpbin.org
                  prefix_rewrite: "/"
          http_filters:
          - name: envoy.router
  clusters:
  - name: httpbin
    connect_timeout: 10s
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: httpbin
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: httpbin.org
                port_value: 80
  - name: metricsservice
    connect_timeout: "0.25s"
    type: "strict_dns"
    lb_policy: ROUND_ROBIN
    http2_protocol_options: {}
    hosts:
    - socket_address:
        address: metricsservice
        port_value: 10001
  - name: accesslogservice
    connect_timeout: "0.25s"
    type: "strict_dns"
    lb_policy: ROUND_ROBIN
    http2_protocol_options: {}
    hosts:
    - socket_address:
        address: accesslogservice
        port_value: 10002
stats_sinks:
  - name: envoy.metrics_service
    config:
      grpc_service:
        envoy_grpc:
          cluster_name: metricsservice
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9901
